[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI_State_Machine.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/UI/title_state.gd" type="Script" id=2]
[ext_resource path="res://game/scenes/UI/level_select_state.gd" type="Script" id=3]
[ext_resource path="res://game/scenes/UI/InLevel.gd" type="Script" id=4]

[node name="GUI_State_Machine" type="Node"]
script = ExtResource( 1 )
start_state = NodePath("TitleScreen")

[node name="TitleScreen" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LevelSelection" type="Node" parent="."]
script = ExtResource( 3 )

[node name="InLevel" type="Node" parent="."]
script = ExtResource( 4 )
